--- a/myvue/package.json
+++ b/myvue/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "jquery": "^3.4.1",
+    "pretty-date": "^0.2.0",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.4",
     "vue-router": "^3.0.1",
